RESOLVED FIXED150272
URTBF after r191194 to fix EFL build.
https://bugs.webkit.org/show_bug.cgi?id=150272
Summary URTBF after r191194 to fix EFL build.
Hunseop Jeong
Reported 2015-10-16 23:48:16 PDT
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/24978/steps/compile-webkit/logs/stdio ../../Source/WebKit2/UIProcess/efl/WebContextMenuProxyEfl.h:51:18: error: ‘virtual void WebKit::WebContextMenuProxyEfl::showContextMenu(const WTF::Vector<WTF::RefPtr<WebKit::WebContextMenuItem> >&)’ marked override, but does not override virtual void showContextMenu(const Vector<RefPtr<WebContextMenuItem>>&) override; ^ ../../Source/WebKit2/UIProcess/efl/WebContextMenuProxyEfl.h: In static member function ‘static WTF::Ref<WebKit::WebContextMenuProxyEfl> WebKit::WebContextMenuProxyEfl::create(EwkView*, WebKit::WebPageProxy&, const WebKit::ContextMenuContextData&, const WebKit::UserData&)’: ../../Source/WebKit2/UIProcess/efl/WebContextMenuProxyEfl.h:46:86: error: invalid new-expression of abstract class type ‘WebKit::WebContextMenuProxyEfl’ return adoptRef(*new WebContextMenuProxyEfl(viewImpl, page, context, userData)); ^ In file included from ../../Source/WebKit2/UIProcess/efl/WebContextMenuProxyEfl.cpp:27:0: ../../Source/WebKit2/UIProcess/efl/WebContextMenuProxyEfl.h:42:7: note: because the following virtual functions are pure within ‘WebKit::WebContextMenuProxyEfl’: class WebContextMenuProxyEfl : public WebContextMenuProxy { ^ In file included from ../../Source/WebKit2/UIProcess/efl/WebContextMenuProxyEfl.h:31:0, from ../../Source/WebKit2/UIProcess/efl/WebContextMenuProxyEfl.cpp:27: ../../Source/WebKit2/UIProcess/WebContextMenuProxy.h:43:18: note: virtual void WebKit::WebContextMenuProxy::showContextMenu() virtual void showContextMenu() = 0;
Attachments
Patch (1.90 KB, patch)
2015-10-16 23:50 PDT, Hunseop Jeong
no flags
Hunseop Jeong
Comment 1 2015-10-16 23:50:41 PDT
WebKit Commit Bot
Comment 2 2015-10-17 01:19:37 PDT
Comment on attachment 263367 [details] Patch Rejecting attachment 263367 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 263367, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit2/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/299407
Csaba Osztrogonác
Comment 3 2015-10-17 01:24:14 PDT
Comment on attachment 263367 [details] Patch Clearing flags on attachment: 263367 Committed r191239: <http://trac.webkit.org/changeset/191239>
Csaba Osztrogonác
Comment 4 2015-10-17 01:24:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.