Source/WebKit2/UIProcess/efl/WebContextMenuProxyEfl.cpp
@@ -46,7 +46,7 @@ WebContextMenuProxyEfl::~WebContextMenuProxyEfl()
 {
 }
 
-void WebContextMenuProxyEfl::showContextMenu(const Vector<RefPtr<WebContextMenuItem>>&)
+void WebContextMenuProxyEfl::showContextMenu()
 {
     notImplemented();
 }
