Source/WebKit2/UIProcess/efl/WebContextMenuProxyEfl.h
@@ -48,7 +48,7 @@ public:
 
     ~WebContextMenuProxyEfl();
 
-    virtual void showContextMenu(const Vector<RefPtr<WebContextMenuItem>>&) override;
+    virtual void showContextMenu() override;
     virtual void hideContextMenu() override;
     virtual void cancelTracking() override;
 
